vendor/pin-project-1.0.7/tests/ui/not_unpin/impl-unsafe-unpin.rs
use pin_project::{pin_project, UnsafeUnpin};

#[pin_project(!Unpin)] //~ ERROR E0119
struct Foo<T, U> {
    #[pin]
    f1: T,
    f2: U,
}

unsafe impl<T, U> UnsafeUnpin for Foo<T, U> where T: Unpin {}

#[pin_project(!Unpin)] //~ ERROR E0119
struct Bar<T, U> {
    #[pin]
    f1: T,
    f2: U,
}

unsafe impl<T, U> UnsafeUnpin for Bar<T, U> {}

#[pin_project(!Unpin)] //~ ERROR E0119
struct Baz<T, U> {
    #[pin]
    f1: T,
    f2: U,
}

unsafe impl<T: Unpin, U: Unpin> UnsafeUnpin for Baz<T, U> {}

fn main() {}
